# habittracker

./: .gitignore  CMakeLists.txt  desktop.ini
include/: ConsoleUI.h  HabitTracker.h  Statistics.h  Types.h  booleanHabit.h  boolean_habit.h  dailylog.h  habit.h  logmanager.h  numericHabit.h  numeric_habit.h  storage.h  tracker.h
src/: ConsoleUI.cpp  Habit.cpp  HabitTracker.cpp  Statistics.cpp  booleanHabit.cpp  dailylog.cpp  habit.cpp  logmanager.cpp  main.cpp  numericHabit.cpp  storage.cpp
tests/: tests.cpp
